services/adguard-home/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - port: 80
    targetPort: 3000
